# supernode

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  task.cmake
cmake/: cosmocc-override.cmake  cosmocc.cmake  task.cmake
include/: supernode.h
src/: binlib.cpp  binlib.h  lib.cpp  main.cpp  process.cpp
